# tensor-intersection-query-lang

./: .gitignore  README.md  grammar.txt  pyproject.toml  setup.cfg  test.py
bench/: Ai_eq_Bj_sweep.jsonl  Aic_eq_Bjc_sweep.jsonl  Aij_eq_Bjk_sweep.jsonl  reduce_sweep.jsonl  share_sweep.jsonl
src/: lexer.py  main.py  parser.py
src/tests/: test_lexer.py
tests/: benchmark.py  sweep_bench.py  test_compiled.py  test_lexer.py  test_parser.py  test_query.py  test_range.py
tiql/: __init__.py  __main__.py  handwritten.py  main.py  parser.py  solver.py
tiql/compiler_passes/: __init__.py  compiler_passes.py
tiql/matching/: __init__.py  ast.py  indirecteinsum.py  intersect.py  range.py
tiql/parsing/: __init__.py  lexer.py  parser.py
